@startuml
class AudioSO {
    + Name : string <<get>>
    + Volume : float <<get>>
    + Pitch : float <<get>>
    + IsLoop : bool <<get>>
}
ScriptableObject <|-- AudioSO
AudioSO --> "Clip" AudioClip
AudioSO --> "Source" AudioSource
class PlayAudioActionSO {
    + AudioName : string <<get>>
}
class PlayAudioAction {
    + <<override>> Awake(stateController:StateController) : void
    + <<override>> OnStateEnter() : void
    + <<override>> OnStateUpdate() : void
    + <<override>> OnStateExit() : void
}
StateActionSO <|-- PlayAudioActionSO
PlayAudioActionSO --> "AudioSource" AudioSO
StateAction <|-- PlayAudioAction
PlayAudioAction --> "_originSO" PlayAudioActionSO
class ThachSanhAudio {
    Awake() : void
    + PlayMelleSound1() : void
    + PlayMelleSound2() : void
    + PlayRunSound() : void
    + PlayAudio(name:string) : void
    + StopAudio(name:string) : void
    + SetupAudio(audio:AudioSO) : void
}
MonoBehaviour <|-- ThachSanhAudio
@enduml
